# tfbpshiny

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs_requirements.txt  production.yml  pyproject.toml
.github/workflows/: branch.yml  ci.yml
compose/production/shiny/: Dockerfile
compose/production/traefik/: Dockerfile  traefik.yml
docs/: REACTIVITY.md  development.md
terraform/: main.tf  terraform.tfvars.example  user_data.sh  variables.tf
tests/e2e/: test_navigation.py
tests/unit/: test_select_datasets.py
tfbpshiny/: app.css  app.py  brentlab_yeast_collection.yaml  components.py  data_service.py  mock_data.py  vdb.py
tfbpshiny/modules/: analysis_sidebar.py  analysis_workspace.py  modals.py  nav.py  selection_matrix.py  selection_sidebar.py
tfbpshiny/modules/binding/: __init__.py  page_test.py  queries.py  ui.py
tfbpshiny/modules/binding/server/: __init__.py  sidebar.py  workspace.py
tfbpshiny/modules/comparison/: page_test.py  queries.py  ui.py
tfbpshiny/modules/comparison/server/: __init__.py  sidebar.py  workspace.py
tfbpshiny/modules/home/: page_test.py  ui.py
tfbpshiny/modules/perturbation/: __init__.py  page_test.py  queries.py  ui.py
tfbpshiny/modules/select_datasets/: page_test.py  queries.py  ui.py
tfbpshiny/rank_response/: main_table_module.py  replicate_plot_module.py
tfbpshiny/styles/: app.css
tfbpshiny/tabs/: individual_regulator_compare_module.py
tfbpshiny/utils/: create_distribution_plot.py  plot_formatter.py  rename_dataframe_data_sources.py  transforms.py
(+6 files in other folders)
