[tool.poetry]
name = "tfbpshiny"
version = "0.0.0"
description = "A shiny app which provides a dashboard to https://huggingface.co/collections/BrentLab/yeastresources"
authors = ["chasem <chasem@wustl.edu>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tfbpapi = {git = "https://github.com/BrentLab/tfbpapi.git", rev = "dev"}
shiny = "^1.4.0"
shinywidgets = "^0.5.2"
plotly = "^6.0.1"
python-dotenv = "^1.1.0"
faicons = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
    "tests.py",
    "test_*.py",
]
pythonpath = ['.']
addopts = "--ignore=tmp"

[tool.coverage.run]
include = ["yeastdnnexplorer/**"]
omit = ["*/tests/*", "experiments/"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = [
    "yeastdnnexplorer",
]
skip = ["venv/"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true

[tool.pylint.FORMAT]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
